<Update> roadmap add aquamarine stage

--- a/contributing/roadmap.mdx
+++ b/contributing/roadmap.mdx
@@ -9,6 +9,55 @@ The following details Chainbase's path to interoperability, security, and sustai
 
 ---
 
+## Aquamarine
+
+![aquamarine-roadmap](../images/aquamarine-roadmap.png)
+
+📅 Mar 20, 2025, 14:30:00 PM +UTC
+
+**Summary**
+
+In ancient lore, aquamarine was the sailor’s stone, offering protection, clarity, and guidance across uncharted waters. It symbolized transformation and renewal, much like the evolution of Chainbase as it advances into its next phase. While Zircon (Genesis) laid the bedrock for a secure and decentralized data network, Aquamarine represents the fluid expansion of this foundation—deepening Web3’s data ecosystem, refining public data standards, and pioneering on-chain AI collaboration.
+
+This phase is crucial as AI and Web3 begin to converge, demanding more scalable, intelligent, and interconnected data solutions. Aquamarine will establish Chainbase as a fundamental public data platform in the AGI era, equipping AI Agents with the infrastructure they need to collaborate and evolve. As the tides of decentralized intelligence rise, Aquamarine is the vessel that will navigate this new frontier.
+
+
+### **Key Focus Areas for Aquamarine**
+
+- **Chainbase Network Explorer**
+    
+    Launch a dynamic interface that allows users to navigate and interact with the expanding data ecosystem, ensuring transparency and usability.
+    
+- **Manuscript Early Adoption**
+    
+    Enhance Manuscript into a core AI-compatible tech stack, providing structured, verifiable, and scalable data for AI-powered Web3 applications.
+    
+- **Delegating Tokens on Testnet**
+    
+    Initiate community engagement by enabling token delegation in a secure, incentivized test environment, laying the groundwork for decentralized governance.
+    
+- **Initializing Data Zone Development**
+    
+    Integrate all Manuscripts within their respective Data Zones that serve as the data source for various application scenarios, much like subnets.
+    
+- **Decentralizing Data Accessibility Layer**
+    
+    Transform data access by establishing a decentralized network architecture, ensuring open, secure, and universal connectivity across blockchain networks.
+    
+- **Developing AI Tooling Kit**
+    
+    Create a comprehensive suite of tools designed specifically for AI Agents, facilitating seamless interaction with on-chain data and empowering automated decision-making.
+    
+- **Creating AI Agents for Vertical Scenes**
+    
+    Deploy specialized AI agents tailored for industry-specific applications, enhancing the integration of AI within vertical markets and driving sector-focused innovation.
+    
+- **Chainbase Network Mainnet Launch**
+    
+    Transition from testnet to a fully operational main network, solidifying Chainbase’s position as a foundational data network in the age of decentralized intelligence.
+    
+---
+
 ## ZIRCON(Genesis)
 
 ![zircon-roadmap](../images/zircon-roadmap.png)
