fix[sui]: offline abstracted datasets and launch raw datasets

--- a/catalog/Sui/Overview.mdx
+++ b/catalog/Sui/Overview.mdx
@@ -3,7 +3,7 @@ title: '☆ Overview'
 ---
 
 Sui is a decentralized blockchain platform designed to deliver high performance, scalability, and security, making it an ideal choice for developing and deploying decentralized applications (DApps). Leveraging innovative consensus mechanisms and advanced architecture, Sui aims to overcome the limitations of traditional blockchain networks while providing a seamless and efficient user experience.
-### The Major Features of the Ethereum Blockchain
+### The Major Features of the Sui Blockchain
 
 1. **High Performance**: Sui is built to handle a high volume of transactions with low latency, enabling it to process thousands of transactions per second. This high throughput ensures that the network can support a growing number of users and applications without experiencing congestion or delays.
 
