--- a/catalog/Sui/Raw.mdx
+++ b/catalog/Sui/Raw.mdx
@@ -2,86 +2,7 @@
 title: 'Raw'
 ---
 
-## 1. sui_coins
-### Table Description
-The sui.sui_coins table stores detailed information about coins on the Sui blockchain. This data is crucial for tracking the balance, ownership, and transactions of various coins within the Sui network, enabling accurate and transparent management of digital assets.
-### Column Descriptions
-
-<div>
-    <iframe
-        src="https://doc-embed-app.chainbasehq.com/columns/sui.sui_coins"
-        width="100%"
-        height="300px"
-        frameBorder="0"
-        scrolling="no"
-    ></iframe>
-</div>
-
-### Table Sample
-
-<div>
-    <iframe
-        src="https://doc-embed-app.chainbasehq.com/data/sui.sui_coins"
-        width="100%"
-        height="300px"
-        frameBorder="0"
-        scrolling="no"
-    ></iframe>
-</div>
-## 2. sui_coins_metadata
-### Table Description
-The sui.sui_coins_metadata table stores detailed metadata information about various coins on the Sui blockchain. This data is essential for providing comprehensive information about each coin, enabling applications and users to understand the attributes and properties of the coins they interact with.
-### Column Descriptions
-
-<div>
-    <iframe
-        src="merlin.:3000/columns/sui.sui_coins_metadata"
-        width="100%"
-        height="300px"
-        frameBorder="0"
-        scrolling="no"
-    ></iframe>
-</div>
-
-### Table Sample
-
-<div>
-    <iframe
-        src="https://doc-embed-app.chainbasehq.com/data/sui.sui_coins_metadata"
-        width="100%"
-        height="300px"
-        frameBorder="0"
-        scrolling="no"
-    ></iframe>
-</div>
-## 3. sui_nfts
-### Table Description
-The sui.sui_nfts table stores detailed information about Non-Fungible Tokens (NFTs) on the Sui blockchain. This data is crucial for managing and tracking NFTs, ensuring that all relevant metadata and transactional information is available for applications and users interacting with NFTs on the Sui network.
-
-### Column Descriptions
-
-<div>
-    <iframe
-        src="https://doc-embed-app.chainbasehq.com/columns/sui.sui_nfts"
-        width="100%"
-        height="300px"
-        frameBorder="0"
-        scrolling="no"
-    ></iframe>
-</div>
-
-### Table Sample
-
-<div>
-    <iframe
-        src="https://doc-embed-app.chainbasehq.com/data/sui.sui_nfts"
-        width="100%"
-        height="300px"
-        frameBorder="0"
-        scrolling="no"
-    ></iframe>
-</div>
-## 4. sui_objects
+## 1. sui_objects
 ### Table Description
 The sui.sui_objects table stores detailed information about various objects on the Sui blockchain. This data is essential for tracking and managing objects, ensuring all relevant metadata and state information is available for applications and users interacting with these objects on the Sui network.
 ### Column Descriptions
@@ -107,59 +28,8 @@ The sui.sui_objects table stores detailed information about various objects on t
         scrolling="no"
     ></iframe>
 </div>
-## 5. sui_packages
-### Table Description
-The sui.sui_packages table stores detailed information about packages on the Sui blockchain. Packages in Sui represent a collection of modules and associated assets deployed together. This table is essential for managing and tracking these packages, ensuring all relevant metadata and state information is available for applications and users interacting with these packages on the Sui network.
-### Column Descriptions
 
-<div>
-    <iframe
-        src="merlin.:3000/columns/sui.sui_packages"
-        width="100%"
-        height="300px"
-        frameBorder="0"
-        scrolling="no"
-    ></iframe>
-</div>
-
-### Table Sample
-
-<div>
-    <iframe
-        src="https://doc-embed-app.chainbasehq.com/data/sui.sui_packages"
-        width="100%"
-        height="300px"
-        frameBorder="0"
-        scrolling="no"
-    ></iframe>
-</div>
-## 6. sui_transaction_blocks
-### Table Description
-The sui.sui_transaction_blocks table logs detailed information about each transaction block on the Sui blockchain. This data is essential for understanding the structure and content of blocks, providing insights into the transactions they contain and their role in the blockchain.
-### Column Descriptions
-
-<div>
-    <iframe
-        src="https://doc-embed-app.chainbasehq.com/columns/sui.sui_transaction_blocks"
-        width="100%"
-        height="300px"
-        frameBorder="0"
-        scrolling="no"
-    ></iframe>
-</div>
-
-### Table Sample
-
-<div>
-    <iframe
-        src="https://doc-embed-app.chainbasehq.com/data/sui.sui_transaction_blocks"
-        width="100%"
-        height="300px"
-        frameBorder="0"
-        scrolling="no"
-    ></iframe>
-</div>
-## 7. sui_transactions
+## 2. sui_transactions
 ### Table Description
 The sui.sui_transactions table logs all transactions occurring on the Sui blockchain. This data is essential for tracking and analyzing the flow of assets and interactions within the network, providing a comprehensive record of all transactional activities.
 ### Column Descriptions
@@ -179,6 +49,33 @@ The sui.sui_transactions table logs all transactions occurring on the Sui blockc
 <div>
     <iframe
         src="https://doc-embed-app.chainbasehq.com/data/sui.sui_transactions"
+        width="100%"
+        height="300px"
+        frameBorder="0"
+        scrolling="no"
+    ></iframe>
+</div>
+
+## 3. sui_checkpoints
+### Table Description
+The sui.sui_checkpoints table stores checkpoint-related data for the Sui blockchain, including the checkpoint’s sequence number and the corresponding raw JSON data at that height. This dataset enables users to track the state of the Sui blockchain at different checkpoints.
+### Column Descriptions
+
+<div>
+    <iframe
+        src="https://doc-embed-app.chainbasehq.com/columns/sui.sui_checkpoints"
+        width="100%"
+        height="300px"
+        frameBorder="0"
+        scrolling="no"
+    ></iframe>
+</div>
+
+### Table Sample
+
+<div>
+    <iframe
+        src="https://doc-embed-app.chainbasehq.com/data/sui.sui_checkpoints"
         width="100%"
         height="300px"
         frameBorder="0"
