--- a/catalog/Ton/Raw.mdx
+++ b/catalog/Ton/Raw.mdx
@@ -133,7 +133,7 @@ The ton.messages table stores detailed information about messages on the TON (Th
 </div>
 ## 6. sub_shards
 ### Table Description
-Masterchain block stores only the reference to lastest shard blocks of workchain.
+Masterchain block stores only the reference to latest shard blocks of workchain.
 ### Column Descriptions
 
 <div>
