docs: update terminology from 'omnichain data network' to 'hyperdata network

--- a/core-concepts/data-processing-based-on-avs.mdx
+++ b/core-concepts/data-processing-based-on-avs.mdx
@@ -4,7 +4,7 @@ title: 'Data Processing Based on AVS'
 
 ## **Overview**
 
-Chainbase Network is an omnichain data network powered by a [dual-chain](/core-concepts/dual-chain) architecture using Cosmos and EigenLayer, enabling trustworthy and transparent on-chain data processing. Through the [Manuscript protocol](/core-concepts/manuscript) on the Chainbase Virtual Machine (CVM), the network ensures seamless data interoperability. By integrating [EigenLayer’s](https://www.eigenlayer.xyz/) staking mechanism, Chainbase leverages Ethereum's economic security to build a high-performance AVS for its [Execution Layer](/core-concepts/architecture/execution_layer). This ensures large-scale data processing while maintaining security, decentralization, and scalability, supporting the growing demands of blockchain applications.
+Chainbase Network is an hyperdata network powered by a [dual-chain](/core-concepts/dual-chain) architecture using Cosmos and EigenLayer, enabling trustworthy and transparent on-chain data processing. Through the [Manuscript protocol](/core-concepts/manuscript) on the Chainbase Virtual Machine (CVM), the network ensures seamless data interoperability. By integrating [EigenLayer’s](https://www.eigenlayer.xyz/) staking mechanism, Chainbase leverages Ethereum's economic security to build a high-performance AVS for its [Execution Layer](/core-concepts/architecture/execution_layer). This ensures large-scale data processing while maintaining security, decentralization, and scalability, supporting the growing demands of blockchain applications.
 
 ## Execution layer node based on AVS
 
