--- a/core-concepts/dual-chain.mdx
+++ b/core-concepts/dual-chain.mdx
@@ -12,7 +12,7 @@ Chainbase introduces an innovative dual-chain architecture that enhances the pro
 1. **Performance Optimization**: As the largest distributed data engine of the future, it needs to support high-throughput data processing. The CVM in the Execution Layer supports parallel computing capabilities, while the Consensus Layer utilizes CometBFT optimized for performance.
 2. **Programmability**: Manuscripts define the standard schema that different data sources need to follow when converting into datasets. The redesigned Execution Layer provides a runtime environment for these Manuscripts.
 3. **Composability**: The redesigned Execution Layer can handle data streams from multiple sources for joint processing. For example, aggregating data sources from various chain lending protocols can create a universal lending rate.
-4. **Enhanced Crypto-Economic Security**: Traditional public chain projects often compromise security to optimize performance and compatibility. By introducing the dual-chain architecture of Eigenlayer and Cosmos, Chainbase incorporates a dual staking model, ensuring game-theoretic security for the omnichain data network.
+4. **Enhanced Crypto-Economic Security**: Traditional public chain projects often compromise security to optimize performance and compatibility. By introducing the dual-chain architecture of Eigenlayer and Cosmos, Chainbase incorporates a dual staking model, ensuring game-theoretic security for the hyperdata network.
 
 #### Consensus Layer
 
