--- a/introduction/about.mdx
+++ b/introduction/about.mdx
@@ -5,7 +5,7 @@ sidebarTitle: 'What Is Chainbase?'
 
 ![introducing_banner](../images/introducing_banner.jpeg)
 
-Chainbase is the world's largest **omnichain data network** designed to integrate all blockchain data into a unified ecosystem, providing an open and transparent data interoperability layer for the AI era. 
+Chainbase is the world's largest **hyperdata network** designed to integrate all blockchain data into a unified ecosystem, providing an open and transparent data interoperability layer for the AI era. 
 
 It has designed a novel **dual-chain** technology architecture that bridges the programmability and composability of crypto data, which supports high throughput, low latency, and eventual determinism, as well as higher cybersecurity through a dual staking model.
 
