--- a/introduction/litepaper.mdx
+++ b/introduction/litepaper.mdx
@@ -10,7 +10,7 @@ title: 'Litepaper'
 
     <p>
       <a href="https://raw.githubusercontent.com/chainbase-labs/chainbase-docs/refs/heads/main/pdf/Chainbase_litepaper.pdf" download="Chainbase_litepaper_en.pdf">
-        Download: Chainbase: The Decentralized Omnichain Data Network for Open AGI Economy
+        Download: Chainbase: The Decentralized hyperdata network for Open AGI Economy
       </a>
     </p>
   </Tab>
