--- a/theia/TheiaChat/task-models.mdx
+++ b/theia/TheiaChat/task-models.mdx
@@ -2,7 +2,7 @@
 title: 'Task Models'
 ---
 
-To trigger the versatile capabilities of Theia in the crypto world, we propose Theia Task Model built upon Theia model. Theia Task Model is designed to serve various needs within the crypto world, and is open to developer community that maximizes its value. Briefly speaking, developers can leverage prompt engineering, Retrieval-Augmented Generation (RAG) and real-time on-chain data, to provide specialized functions such as trading Task Model, security Task Model, and public opinion monitoring Task Model. Moreover, integrated with Chainbase omnichain data network, Theia Task Models are capable of interpreting these complex data and offering actionable insights, making them invaluable tools for users navigating the crypto ecosystem.
+To trigger the versatile capabilities of Theia in the crypto world, we propose Theia Task Model built upon Theia model. Theia Task Model is designed to serve various needs within the crypto world, and is open to developer community that maximizes its value. Briefly speaking, developers can leverage prompt engineering, Retrieval-Augmented Generation (RAG) and real-time on-chain data, to provide specialized functions such as trading Task Model, security Task Model, and public opinion monitoring Task Model. Moreover, integrated with Chainbase hyperdata network, Theia Task Models are capable of interpreting these complex data and offering actionable insights, making them invaluable tools for users navigating the crypto ecosystem.
 
 ## Potential Applications of Theia Task Model
 
