--- a/theia/World_model/theia.mdx
+++ b/theia/World_model/theia.mdx
@@ -2,7 +2,7 @@
 title: 'Theia'
 ---
 
-We have developed a foundational **Crypto World Model (Theia)** on the Chainbase omnichain data network. Theia aims to transform vast amounts of on-chain dark knowledge into comprehensive intelligence for humans in a trustworthy manner. This is accomplished by distilling knowledge from both language models and the Chainbase omnichain data network through model training.
+We have developed a foundational **Crypto World Model (Theia)** on the Chainbase hyperdata network. Theia aims to transform vast amounts of on-chain dark knowledge into comprehensive intelligence for humans in a trustworthy manner. This is accomplished by distilling knowledge from both language models and the Chainbase hyperdata network through model training.
 
 ## How do we build Theia?
 
@@ -10,7 +10,7 @@ We propose a model tuning algorithm for Theia, **Decentralized Weight-Decomposed
 
 ## Capabilities of Theia
 
-Unlike existing crypto AI projects, Theia offers a complete reasoning chain for question answering, providing transparent and trustworthy results. It learns crypto patterns from extensive on-chain and off-chain data and spatial-temporal activities, and its responses are based on causal reasoning with these crypto patterns. Ultimately, Theia consists of a powerful LLM parameter matrix operating with the crypto-oriented parameter matrix and crypto patterns. To ensure up-to-date intelligence with reliable arguments, we integrate Theia with the real-time omnichain data network and an Internet AI reader via Retrieval-Augmented Generation (RAG). Leveraging Theia's intelligence, users can also build task-specific AI models on top of it.
+Unlike existing crypto AI projects, Theia offers a complete reasoning chain for question answering, providing transparent and trustworthy results. It learns crypto patterns from extensive on-chain and off-chain data and spatial-temporal activities, and its responses are based on causal reasoning with these crypto patterns. Ultimately, Theia consists of a powerful LLM parameter matrix operating with the crypto-oriented parameter matrix and crypto patterns. To ensure up-to-date intelligence with reliable arguments, we integrate Theia with the real-time hyperdata network and an Internet AI reader via Retrieval-Augmented Generation (RAG). Leveraging Theia's intelligence, users can also build task-specific AI models on top of it.
 
 ## Summary
 
