--- a/theia/World_model/features.mdx
+++ b/theia/World_model/features.mdx
@@ -5,7 +5,7 @@ title: 'Features'
 In Web3, Theia excels with its native high performance, robust security measures, and transparent reasoning, making it a next-generation Crypto World Model tailored for the Web3 community.
 
 #### 1. Crypto Native with High Performance
-Theia is a native World Model for the crypto ecosystem, trained using the on-chain data from Chainbase omnichain data network and off-chain data from the Internet. It leverages a unique **Decentralized Weight-Decomposed Low-Rank Adaptation ($D^2ORA$) algorithm**, which allows for training a specialized crypto parameter matrix without modifying the parameters of the base natural language processing (NLP) model. By combining these parameters, Theia integrates the robust natural language capabilities of large language models (LLMs) with expert-level knowledge of both on-chain and off-chain crypto data. This results in superior Web3 attributes and performance compared to models like ChatGPT.
+Theia is a native World Model for the crypto ecosystem, trained using the on-chain data from Chainbase hyperdata network and off-chain data from the Internet. It leverages a unique **Decentralized Weight-Decomposed Low-Rank Adaptation ($D^2ORA$) algorithm**, which allows for training a specialized crypto parameter matrix without modifying the parameters of the base natural language processing (NLP) model. By combining these parameters, Theia integrates the robust natural language capabilities of large language models (LLMs) with expert-level knowledge of both on-chain and off-chain crypto data. This results in superior Web3 attributes and performance compared to models like ChatGPT.
 
 #### 2. Security
 To enhance security, Theia employs generative AI to periodically update its digital persona. AI models are susceptible to attacks where adversaries can exploit model parameters to induce errors or generate targeted results. This vulnerability arises from the ability to reverse-engineer gradients from the model's parameters. Theia addresses this issue with an innovative **Generate to Defend (G2D)** algorithm, which uses generative diffusion models to capture and randomize the parameter space. This approach periodically refreshes Theia's parameters, preventing exhaustive attacks and model leaks with minimal cost.
