--- a/introduction/tokenomics.mdx
+++ b/introduction/tokenomics.mdx
@@ -1,108 +1,123 @@
 ---
 title: 'Tokenomics'
 ---
-## **Overview**
+# The Age of AI Demands a New Data Economy
 
-\$C is the native token of our decentralized data network, designed to facilitate and incentivize various activities within the ecosystem. The tokenomics model aims to support a sustainable and secure network by aligning the incentives of all participants, ensuring the efficient operation of both the execution and consensus layers, and fostering ongoing development and usage of the network. $C serves as a utility token for coordinating data providers and consumers within the network, incentivizing protocol participants to effectively organize data.
+Data is the foundation of artificial intelligence.
 
-By using our network, users can easily access data, paying only for the specific information they need. Our network plays a crucial role in making blockchain data more accessible and facilitating its exchange.
+As AI grows more autonomous and deeply embedded into digital infrastructure, high-quality data has become the most valuable asset.
 
-## **Reward Structure**
-![network participation](../images/tokenomic.png)
-The reward structure of $C is designed to incentivize network participation and ensure the growth and sustainability of the ecosystem. Rewards are primarily distributed through:
+Yet, current data systems aren't built for intelligent machines. Blockchain data remains fragmented, unstructured, unverifiable, and lacks pricing or incentive model. There's no native mechanism to value, trade, or coordinate data effectively.
 
-### **Data Query Fees**
-Data developers create Manuscripts for processing blockchain data, and the resulting datasets can be queried and used. These query operations require the payment of $C fees.
+Chainbase introduces a new standard: **Hyperdata Network**. Designed for the AI-native internet, it transforms raw blockchain activity into structured, composable, and machine-consumable data. It enables autonomous agents, protocols, and humans to access and coordinate through a shared data layer.
 
-Data developers pay a certain amount of $C to the network when querying datasets, which covers the costs of data retrieval and serves as a reward for network resource providers (such as Operators and Validators), ensuring they continue to provide high-quality services.
+At the heart of this ecosystem is **$C**. It powers AI and the broader DataFi economy.
 
-**Distribution:**
-- **80%** is distributed to Operators and their delegators. This portion of the fees primarily incentivizes Operators to maintain and optimize computing resources, ensuring efficient data query processing.
-- **15%** is distributed to Developer. Encourage developers to provide high-quality manuscript data processing logic.
-- **5%** of the data query fee is burned.
+## What is $C?
 
-### **Incentive Operator Pools**
-A total of 15% of the $C token supply will be allocated over 6 years, with 2% unlocked annually. This is to incentivize Operators to provide reliable and diverse computing resources, supporting the network in achieving large-scale data processing.
+$C is the foundational asset of DataFi ecosystem, enabling the production, exchange, and governance of structured data across AI and crypto.
+![death spiral](../images/tokenomics-1.webp)
 
-**Distribution:**
-- **100%** is distributed to Operators and their delegators based on the quality and quantity of data processing services provided for blockchain projects.
+### Core Utilities of $C
 
-### **Block Rewards**
-Provided to help bootstrap the Network (-2% Annual Inflation)
+#### Dataset Access
+Agents, apps, and protocols use $C to query and consume structured data.
 
-- This fixed proportion ensures the sustainability and long-term incentives of the network.
-- Block rewards are primarily used to incentivize Validators to maintain the security and stability of the network and ensure the proper functioning of the blockchain.
+#### Ecosystem Incentives
+Distributed to developers, contributors, and users based on their activity and value to the network.
 
-**Distribution:**
-- **100%** is distributed to Validators and their delegators, who maintain the consensus mechanism of the blockchain and verify transactions.
+#### Decentralized Execution Security
+Staked to support and validate data processing through the AVS layer.
 
-## **Roles and Incentives**
+#### Protocol Governance
+Token holders vote on protocol upgrades, incentive models, and network parameters.
 
-### **Operators**
-Operators play a crucial role in the network by providing the necessary computing resources for the execution layer, ensuring that data processing tasks run smoothly.
+#### DataFi Currency
+Serves as the standard unit of account and settlement across the Chainbase ecosystem.
 
-- Responsibilities include:
-    - Maintaining and managing computing infrastructure to ensure efficient operation.
-    - Processing and executing data query requests submitted by data developers.
-    - Ensuring network stability and responsiveness, providing high-quality services.
+## Token Distribution
 
-#### **Incentives**
+Chainbase has allocated 65% of the total $C supply to ecosystem growth, contributor rewards, and user incentives. This reflects Chainbase's commitment to open participation and long-term alignment.
+![death spiral](../images/tokenomics-2.webp)
 
-- Receive 80% of data query fees, incentivizing them to maintain and optimize computing resources for efficient data query processing.
-- Receive 100% of the rewards from the incentive operator pools, encouraging them to provide efficient data processing services for blockchain projects.
+### Token Distribution Breakdown
 
-### **Validators**
-Validators play a critical role in maintaining network security and consensus. They are responsible for verifying transactions, ensuring data integrity, and maintaining network stability.
+- **Ecosystem + Community (40%)**: Reserved for grants, integrations, developer incentives, campaign rewards, and long-term community growth. This allocation supports open access and sustained participation in the Chainbase network.
 
-- Responsibilities include:
-    - Verifying and confirming transactions to ensure their legality and accuracy.
-    - Maintaining the network's consensus mechanism, preventing malicious behavior and attacks.
-    - Participating in network governance, proposing and voting on network improvements and development directions.
+- **Airdrop Incentives (13%)**: Distributed over three seasons to reward strategic partners (e.g: Season 1 allocates 3.5%, including 2% native community incentives and an additional 1.5% Binance Alpha), developers, users, project teams, and contributors who actively support ecosystem growth.
 
-#### **Incentives**
-- Receive 100% of block rewards, incentivizing them to maintain network security and stability, and ensure the proper functioning of the blockchain.
+- **Worker Incentives (12%)**: Allocated to participants who operate data nodes and support Chainbase's decentralized infrastructure.
 
-### **Data Developers**
-Data developers are responsible for contributing code for data transformation, making datasets available within the network, and querying dataset results.
+- **Early Backers (17%)**: For initial investors who provided early support and guidance to the project.
 
-- Responsibilities include:
-    - Building and maintaining data transformation code (Manuscripts) to ensure datasets can be effectively processed and queried.
-    - Conducting data queries to obtain the necessary results, supporting applications.
-    - Participating in network development and improvement, proposing new features and optimizations.
+- **Core Contributors (15%)**: Reward for founding team members and core builders, with allocations optimally aligned with long-term protocol success.
 
-#### **Incentives**
-- Receive 15% of data query fees to provide high-quality manuscript data processing logic
+- **Liquidity (3%)**: Reserved for exchange support and healthy market dynamics.
 
-### **Delegators**
-Delegators enhance the network's economic security by staking tokens to Validators and Operators.
+**Total supply**: 1,000,000,000 $C
 
-- Responsibilities include:
-    - Selecting and supporting high-performance Validators and Operators by staking $C, enhancing their economic security.
-    - Monitoring and evaluating the performance of Validators and Operators to ensure they provide high-quality services.
-    - Participating in network governance by voting on proposals and influencing the network's development and direction.
+**Initial Unlocked Supply**: 16%
 
-#### **Incentives**
+## Unlock Schedule
 
-- Earn a share of the rewards earned by the Validators and Operators they support. Delegators share in the rewards by staking tokens to Validators and Operators.
-- Receive additional incentives for supporting high-performance Validators and Operators to ensure network security and stability.
+The $C release model is structured to ensure long-term stability and meaningful participation.
+![death spiral](../images/tokenomics-3.webp)
 
-## **Economic Sustainability**
+### Core Team & Early Backers
+Tokens vest over 3 years, with a 12-month cliff followed by linear distribution over 24 months—designed to incentivize long-term contribution.
 
-Ensuring the long-term value and stability of $C is crucial for the success of the network. We have implemented several mechanisms to prevent inflation and maintain the utility of the token:
+### Sustained Incentives for Infrastructure Operators
+Worker Incentives, distributed to participants operating data nodes, vest linearly over 60 months, ensuring consistent support for the decentralized infrastructure that powers the Chainbase network.
 
-### **Inflation Control**
+### Ecosystem-Aligned Emissions
+Tokens allocated to ecosystem development unlock linearly over 36 months, aligned with developer growth, incentive programs, and platform adoption milestones.
 
-- **Annual Cap**: Token issuance is capped at 3% per year to prevent excessive inflation.
-- **Controlled Distribution**: Newly issued tokens are carefully allocated to maintain network security and incentivize participation without excessively diluting token value.
+This phased rollout model allows $C supply to expand in parallel with real usage, mitigates short-term speculation pressure, and reinforces sustainable participation in the DataFi economy.
 
-### **Utility Maintenance**
+## Launching on Base and BNB Chain
 
-- **Broad Utility**: $C tokens are required for various activities within the network, including query fees, staking, and accessing datasets, ensuring continuous demand.
-- **Fee Adjustments**: Query fees can be adjusted based on network activity and demand to balance economic incentives and operational costs.
+$C will launch primarily on Base, with additional liquidity provided on BNB Smart Chain (BSC). This dual-chain approach enables the Chainbase ecosystem to:
 
-### **Economic Security**
+- Leverage Base's performance, low fees, and strong developer ecosystem
+- Provide access to broader liquidity and user base through BSC
+- Cross-chain utility and trading
 
-- **Staking**: Validators and Delegators must stake $C tokens, aligning their economic interests with the network's security and stability.
-- **Performance Incentives**: High-performing Operators and Validators receive greater rewards, promoting continuous improvement and network reliability.
+This approach ensures a smooth launch and positions Chainbase for long-term interoperability across Web3 ecosystems.
 
-By integrating these elements, the $C tokenomics model aims to create a balanced and sustainable ecosystem that fairly rewards all participants and promotes the long-term success of our decentralized data network.
+## Why $C Matters
+
+Data is no longer passive infrastructure. **It is capital**.
+
+$C turns raw data into an economic asset. It facilitates autonomous coordination, rewards real contributions, and enables an open, AI-ready data economy.
+
+Chainbase provides the infrastructure. $C brings it to life by making the infrastructure liquid, scalable, and usable to everyone.
+
+## About Chainbase
+
+Chainbase is building the Hyperdata Network for AI — a foundational layer for the DataFi era.
+
+Built as a Hyperdata Network, Chainbase turns onchain signals into structured, verifiable, and AI-ready data that can be directly processed by AI models and decentralized applications. Its core stack includes:
+
+- **Manuscript**: a programmable layer for building data assets
+- **AVS layer**: decentralized data execution and verification
+- **C Token**: the native currency for AGI
+
+This structured data layer supports a new generation of crypto applications that are autonomous, composable, and economically aligned with their users and contributors.
+
+### Key Achievements
+
+To date, Chainbase has:
+- Indexed over 200 blockchains
+- Processed more than 500 billion data calls
+- Supports a community of more than 35,000 developers
+- Over 10,000 projects actively use Chainbase across a wide range of use cases, including MEV infrastructure, L2 explorers, agent protocols, and onchain analytics
+
+### Team & Backing
+
+The founding team brings deep experience in blockchain infrastructure, data engineering, and protocol security. Chainbase is backed by top-tier investors and works closely with ecosystems across modular infrastructure, large language models, and onchain AI.
+
+As the need for machine-readable and economically aligned data continues to grow, Chainbase provides the foundational layer for a programmable data economy—one where information moves freely between agents, protocols, and people.
+
+### Links
+[Website](https://chainbase.com) | [Twitter](https://twitter.com/chainbase) | [Telegram](https://t.me/chainbase) | [Blog](https://blog.chainbase.com) | [Docs](https://docs.chainbase.com) | [Github](https://github.com/chainbase)
+![death spiral](../images/tokenomics-4.webp)
