<ADD> MiCAR white paper download link

--- a/contributing/micar_whitepaper.mdx
+++ b/contributing/micar_whitepaper.mdx
@@ -5,3 +5,9 @@ title: 'MiCAR White Paper'
 <a href="https://github.com/chainbase-labs/chainbase-docs/blob/main/pdf/Chainbase_White_Paper_06082025.pdf" target="_blank">
     <img src="../images/Chainbase_White_Paper_06082025_00.png" alt="English Litepaper" width="700" height="900" />
 </a>
+
+<p>
+<a href="https://raw.githubusercontent.com/chainbase-labs/chainbase-docs/refs/heads/main/pdf/Chainbase_White_Paper_06082025.pdf" download="Chainbase_White_Paper_06082025.pdf">
+    Download: Chainbase: MiCAR White Paper
+</a>
+</p>
